@@ -17,7 +17,6 @@ import static com.gentics.mesh.search.index.MappingHelper.UUID_KEY;
 import static com.gentics.mesh.search.index.MappingHelper.notAnalyzedType;
 import static com.gentics.mesh.search.index.MappingHelper.trigramTextType;
 
-import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -48,7 +47,7 @@ public class NodeContainerMappingProvider extends AbstractMappingProvider {
 
 	private static final Logger log = LoggerFactory.getLogger(NodeContainerMappingProvider.class);
 
-	public final BootstrapInitializer boot;
+	private final BootstrapInitializer boot;
 
 	private final MeshOptions options;
 
@@ -86,8 +85,6 @@ public class NodeContainerMappingProvider extends AbstractMappingProvider {
 	public JsonObject getMapping(Schema schema, Branch branch) {
 		// 1. Get the common type specific mapping
 		JsonObject mapping = getMapping();
-
-		addBinaryFieldExcludes(mapping, schema);
 
 		// 2. Enhance the type specific mapping
 		JsonObject typeMapping = mapping.getJsonObject(DEFAULT_TYPE);
@@ -159,29 +156,12 @@ public class NodeContainerMappingProvider extends AbstractMappingProvider {
 		mapping.put(DEFAULT_TYPE, typeMapping);
 
 		for (FieldSchema field : schema.getFields()) {
-			JsonObject fieldInfo = getFieldMapping(field, branch);
-			fieldProps.put(field.getName(), fieldInfo);
+			if (field.isMappingRequired(options.getSearchOptions())) {
+				JsonObject fieldInfo = getFieldMapping(field, branch);
+				fieldProps.put(field.getName(), fieldInfo);
+			}
 		}
 		return mapping;
-	}
-
-	/**
-	 * Add custom exclude for the source document. We don't want to store the base64 encoded data fields.
-	 * 
-	 * @param mapping
-	 * @param schema
-	 */
-	private void addBinaryFieldExcludes(JsonObject mapping, Schema schema) {
-		JsonObject sourceInfo = new JsonObject();
-
-		JsonArray excludes = new JsonArray();
-		List<String> binaryFields = schema.getFields().stream().filter(f -> f.getType().equals("binary")).map(f -> f.getType())
-			.collect(Collectors.toList());
-		for (String field : binaryFields) {
-			excludes.add("fields." + field + ".data");
-		}
-		sourceInfo.put("excludes", excludes);
-		mapping.getJsonObject(DEFAULT_TYPE).put("_source", sourceInfo);
 	}
 
 	/**
